Lista de ingredientes!

--- a/lista-de-ingredientes.html
+++ b/lista-de-ingredientes.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Ingredientes</title>
     <h1>Listagem de ingredientes!</h1>
+  </head>
+  <body>
     <ul>
       <li>Farinha</li>
       <li>Açucar</li>
@@ -12,6 +14,5 @@
       <li>Leite</li>
       <li>Fermento</li>
     </ul>
-  </head>
-  <body></body>
+  </body>
 </html>
